Add Hoppify beer search endpoint
